--- a/style.css
+++ b/style.css
@@ -506,7 +506,10 @@ input[type=checkbox] {
     align-items: center;
     color: var(--color1);
   }
-
+  .f1 {
+    justify-content: center;
+    align-items: baseline;
+}
 }
 
 @media(max-width:1024px) {
