--- a/style.css
+++ b/style.css
@@ -641,6 +641,13 @@ input[type=checkbox] {
 
 }
 
+.sectionP1 {
+  margin: 10px 0 0 0;
+  padding: 0px 0px 0px 0px;
+}
+
+
+
 .top2 h1 {
   font-size: 20px !important;
 }
@@ -661,5 +668,10 @@ input[type=checkbox] {
 }
 .s3news3 img {
   height: 250px;
+}
+
+.footerCol img {
+  width: 100%;
+  margin: 30px 0;
 }
 }
