--- a/style.css
+++ b/style.css
@@ -413,6 +413,7 @@ main #s4:nth-child(1) {
   text-align: center;
 }
 
+
 /* RESPONSIVE NAVBAR MENU STARTS */
 
 /* CHECKBOX HACK */
@@ -426,6 +427,26 @@ input[type=checkbox] {
   display: none;
   font-size: 34px;
   user-select: none;
+}
+
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: var(--color2); /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -566,7 +587,6 @@ input[type=checkbox] {
 
 }
 
-
 @media(max-width:768px) {
   .top2 h1 {
     font-size: 40px !important;
@@ -583,7 +603,7 @@ input[type=checkbox] {
   }
 
   .s3container2 {
-    margin-top: 0px;
+    margin-top: 30px;
   }
 
   .f1 {
@@ -593,9 +613,6 @@ input[type=checkbox] {
   #s4 {
     flex-direction: column;
   }
-}
-
-@media(max-width:768px) {
 
   #date {
     font-weight: 800;
