--- a/style.css
+++ b/style.css
@@ -501,12 +501,6 @@ input[type=checkbox] {
     opacity: 0.9;
   }
 
-  /* #nav ul li a:hover {
-  display: inline-block;
-  background-color:var(--color2);
-  transition: 0.3s ease;
-} */
-
   #nav ul li a {
     color: white !important;
     margin: 15px;
@@ -539,14 +533,22 @@ input[type=checkbox] {
 
 @media(max-width:1024px) {
 
+  .sectionP1 {
+    margin: 30px 0;
+    padding: 0px 0px 0px 0px;
+}
   .show {
     flex-direction: column;
   }
 
   .show img {
     width: 100%;
-    height: 600px;
+    height: 500px;
   }
+
+  .text p:nth-child(3) {
+    font-size: 20px;
+}
 
   .text {
     width: 100%;
@@ -568,7 +570,7 @@ input[type=checkbox] {
   }
   .s3news3 img {
     
-    height: 600px;
+    height: 400px;
 }
 
   main #s4:nth-child(1) {
@@ -589,7 +591,7 @@ input[type=checkbox] {
 
 @media(max-width:768px) {
   .top2 h1 {
-    font-size: 40px !important;
+    font-size: 30px !important;
   }
 
   #logo a img {
@@ -599,7 +601,7 @@ input[type=checkbox] {
 
   .show img {
     width: 100%;
-    height: 500px;
+    height: 400px;
   }
 
   .s3container2 {
@@ -622,7 +624,7 @@ input[type=checkbox] {
     font-size: 10px;
   }
   .s3news3 img {
-    height: 500px;
+    height: 330px;
 }
   #logo {
     flex-direction: column;
@@ -648,14 +650,29 @@ input[type=checkbox] {
     margin-top: 30px;
     flex-direction: column;
   }
+  .top2 p a {
+
+    font-size: 15px;
+
+}
 
 }
 
 @media(max-width:425px){
   .top2 p a {
 
-    font-size: 14px;
+    font-size: 15px;
 
+}
+
+.s3news3 div:nth-child(2) p:nth-child(3) {
+  font-size: 15px;
+}
+.text p:nth-child(3) {
+  font-size: 15px;
+}
+.s3left p:nth-child(4) {
+  font-size: 15px;
 }
 
 .sectionP1 {
