--- a/style.css
+++ b/style.css
@@ -413,6 +413,31 @@ main #s4:nth-child(1) {
   text-align: center;
 }
 
+.show_main{
+  display: flex;
+  flex-direction: column;
+}
+
+.show_main h1{
+  font-size: 50px;
+  padding: 20px 0px;
+}
+
+.show_main p:nth-child(2){
+  font-size: 20px;
+  padding: 0px 0px 20px 0px;
+}
+
+.show_main p:nth-child(4){
+  font-size: 30px;
+  padding: 20px 0px 0px 0px;
+}
+
+#readmore {
+  cursor: pointer;
+  text-decoration: underline;
+  color: var(--color2);
+}
 
 /* RESPONSIVE NAVBAR MENU STARTS */
 
@@ -440,7 +465,7 @@ input[type=checkbox] {
   background-color: var(--color2); /* Set a background color */
   color: white; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
+  padding: 15px 20px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
   font-size: 18px; /* Increase font size */
 }
@@ -448,6 +473,7 @@ input[type=checkbox] {
 #myBtn:hover {
   background-color: #555; /* Add a dark-grey background on hover */
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   html {
