--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ body {
 
 .text p:nth-child(3) {
   font-size: 24px;
+  line-height: 45px;
 }
 
 .s3container {
@@ -240,6 +241,7 @@ body {
 
 .s3left p:nth-child(4) {
   font-size: 20px;
+  line-height: 35px;
 }
 
 .s3container2 {
@@ -278,6 +280,7 @@ body {
 
 .s3news3 div:nth-child(2) p:nth-child(3) {
   font-size: 17px;
+  line-height: 35px;
 }
 
 #s4 {
